# docs/swagger.yaml
@@ -29,6 +29,36 @@ definitions:
       type:
         type: integer
     type: object
+  revenue.AddRevenueRequest:
+    properties:
+      money:
+        type: number
+      remark:
+        type: string
+      type:
+        type: integer
+    type: object
+  revenue.AddRevenueTypeReq:
+    properties:
+      type_name:
+        type: string
+    type: object
+  revenue.DelRevenueTypeReq:
+    properties:
+      id:
+        type: integer
+    type: object
+  revenue.UpdateRevenueRequest:
+    properties:
+      id:
+        type: integer
+      money:
+        type: number
+      remark:
+        type: string
+      type:
+        type: integer
+    type: object
   user.LoginRequest:
     properties:
       password:
@@ -218,6 +248,141 @@ paths:
             $ref: '#/definitions/webbase.Response'
       tags:
       - 消费管理相关接口
+  /ledger/v1/consume/update_revenue:
+    put:
+      description: 更新收入记录
+      parameters:
+      - description: Bearer 31a165baebe6dec616b1f8f3207b4273
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: JSON数据
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/revenue.UpdateRevenueRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/webbase.Response'
+      tags:
+      - 收入管理相关接口
+  /ledger/v1/revenue/add_revenue:
+    post:
+      description: 新增收入记录
+      parameters:
+      - description: Bearer 31a165baebe6dec616b1f8f3207b4273
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: JSON数据
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/revenue.AddRevenueRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/webbase.Response'
+      tags:
+      - 收入管理相关接口
+  /ledger/v1/revenue/add_revenue_type:
+    post:
+      description: 新增收入种类
+      parameters:
+      - description: Bearer 31a165baebe6dec616b1f8f3207b4273
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: JSON数据
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/revenue.AddRevenueTypeReq'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/webbase.Response'
+      tags:
+      - 收入管理相关接口
+  /ledger/v1/revenue/del_revenue_type:
+    delete:
+      description: 删除收入种类
+      parameters:
+      - description: Bearer 31a165baebe6dec616b1f8f3207b4273
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: JSON数据
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/revenue.DelRevenueTypeReq'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/webbase.Response'
+      tags:
+      - 收入管理相关接口
+  /ledger/v1/revenue/revenue_list:
+    get:
+      description: 收入记录列表
+      parameters:
+      - description: Bearer 31a165baebe6dec616b1f8f3207b4273
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - in: query
+        name: end_time
+        type: string
+      - in: query
+        name: limit
+        type: integer
+      - in: query
+        name: offset
+        type: integer
+      - in: query
+        name: start_time
+        type: string
+      - in: query
+        name: type
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/webbase.Response'
+      tags:
+      - 收入管理相关接口
+  /ledger/v1/revenue/revenue_type_list:
+    get:
+      description: 收入种类列表
+      parameters:
+      - description: Bearer 31a165baebe6dec616b1f8f3207b4273
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/webbase.Response'
+      tags:
+      - 收入管理相关接口
   /ledger/v1/user/captcha:
     get:
       description: 获取图片验证码
